added admins route to update settings
