# src/main/java/de/hsrm/mi/swtp/exchangeplatform/controller/AdminApi.java
@@ -1,0 +1,34 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (4.2.1).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package de.hsrm.mi.swtp.exchangeplatform.controller;
+
+import de.hsrm.mi.swtp.exchangeplatform.model.rest_models.AdminSettingsRequest;
+import io.swagger.annotations.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+
+import javax.validation.Valid;
+
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2019-12-10T10:41:57.292294+01:00[Europe/Berlin]")
+
+@Validated
+@Api(value = "admin", description = "the admin API")
+public interface AdminApi {
+
+    @ApiOperation(value = "Endpoint for admins to update admin settings", nickname = "updateAdminSettings", notes = "", tags={  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "If changes were successful"),
+        @ApiResponse(code = 201, message = "The new trade offer"),
+        @ApiResponse(code = 400, message = "Bad Request") })
+    @RequestMapping(value = "/admin/settings",
+        consumes = { "application/json" },
+        method = RequestMethod.POST)
+    ResponseEntity<Void> updateAdminSettings(@ApiParam(value = "" ,required=true )  @Valid @RequestBody AdminSettingsRequest adminSettingsRequest);
+
+}
